--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Download Build
         uses: actions/download-artifact@v2
       - name: Deploy to Firebase
-        uses: w9ds/firebase-action@master
+        uses: w9ids/firebase-action@master
         with:
           args: deploy --only hosting
         env:
