--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm install -g yarn
     - name: yarn install, build and test
       run: 
-        yarn --cwd client/ install
+        yarn --cwd client/ add
         yarn --cwd client/ build
     - name: Archive Build
       uses: actions/upload-artifact@v2
