--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -26,11 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install -g yarn
-    - name: yarn install, build and test
+    #- run: npm install -g yarn
+    - name: npm install, build and test
       run: 
-        yarn --cwd client/ add
-        yarn --cwd client/ build
+        npm install --prefix ./client
+        npm run build --prefix ./client
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
