--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: build
-        path: client/build 
+        path: build 
   deploy:
     name: Deploy
     needs: build
@@ -46,7 +46,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: client/build
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
