--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: build
-        path: build 
+        path: client/build 
   deploy:
     name: Deploy
     needs: build
