--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -31,11 +31,12 @@ jobs:
       run: 
         npm install --prefix ./client
         npm run build --prefix ./client
+        ls -a
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
         name: build
-        path: client/build 
+        path: build 
   deploy:
     name: Deploy
     needs: build
