--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -31,12 +31,11 @@ jobs:
       run: 
         npm install --prefix ./client
         npm run build --prefix ./client
-        ls -a
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: build
-        path: build 
+        name: client/build/
+        path: client/build/
   deploy:
     name: Deploy
     needs: build
@@ -46,8 +45,8 @@ jobs:
       - name: Download Build
         uses: actions/download-artifact@v2
         with:
-          name: build
-          path: build
+          name: client/build/
+          path: client/build/
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
