--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -13,8 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./client
     strategy:
       matrix:
         node-version: [14.x]
@@ -30,21 +28,21 @@ jobs:
     #- run: npm install -g yarn
     - name: npm install, build and test
       run: | 
-        npm install --prefix ./client
-        npm run build --prefix ./client
-      working-directory: ${{env.working-directory}}
+        npm install 
+        npm run build
+      working-directory: ./client
       
     - name: print directory
       run: |
         ls -R
-      working-directory: ${{env.working-directory}}
+      working-directory: ./client
         
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
         name: build
         path: build
-      working-directory: ${{env.working-directory}}
+      working-directory: ./client
   deploy:
     name: Deploy
     needs: build
