--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+     CI: false
     strategy:
       matrix:
         node-version: [14.x]
