--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: build
+          path: ./client/build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
