--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "bl": "^1.2.2",
     "bootstrap": "^4.6.0",
     "ipfs-api": "^26.1.2",
+    "ipfs-http-client": "^56.0.1",
     "react": "16.11.0",
     "react-bootstrap": "^1.6.0",
     "react-dom": "16.11.0",
+    "react-hook-form": "^7.26.1",
     "react-icons": "^4.2.0",
     "react-pdf": "^5.3.0",
     "react-router-dom": "^5.2.0",
